Fixed some issues on mobile

--- a/style.css
+++ b/style.css
@@ -192,7 +192,6 @@ form {
 .desc {
     margin-top: 30px;
     font-size: 22px;
-    width: 800px;
 }
 
 #caret {
